# elo

./: .gitignore  Cargo.toml  DESIGN.md  README.md  custom-elements.json  default.nix  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: main.yml
example/workdir/: dna.yaml  happ.yaml  my-dna.dna
example/zomes/example/: Cargo.toml
example/zomes/example/src/: lib.rs
example/zomes/profiles/: Cargo.toml
lib/: Cargo.toml
lib/src/: countersigning.rs  elo_rating.rs  elo_rating_system.rs  game_result.rs  lib.rs  mixin.rs  unpublished.rs
lib/src/countersigning/: common.rs  mod.rs  receiver.rs  sender.rs
lib/src/game_result/: handlers.rs  mod.rs  unpublished.rs  validation.rs
mixin/: Cargo.toml
mixin/src/: elo_ranking.rs  lib.rs  mixin.rs
mixin/src/countersigning/: common.rs  receiver.rs  sender.rs
mixin/src/game_result/: handlers.rs  mod.rs  unpublished.rs  validation.rs
src/: elo-service.ts  elo-store.ts  types.ts
src/elements/: elo-ranking.ts  game-results-history.ts
src/state/: ranking-store.ts
tests/: package.json
tests/src/: elo.ts  index.ts  my_zome.ts  utils.ts
ui/: package.json
ui/demo/: index.html
ui/src/: HcElo.ts  context.ts  elo-service.ts  elo-store.ts  hc-elo.ts  index.ts  types.ts
ui/src/definitions/: elo-ranking.ts  game-results-history.ts
ui/src/elements/: elo-ranking.ts  game-result-history.ts  game-results-history.ts
ui/src/state/: elo-store.ts  ranking-store.ts
workdir/: happ.yaml  my-app.happ
