[package]
edition = "2018"
name = "hc_mixin_elo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hdk =  {version = "0.0.122", features = ["encoding"]}
serde = "1"
skill-rating = "0.0.1"
hc_lib_ranking_index = {git = "https://github.com/holochain-open-dev/ranking-index", rev = "69f2804f80832e0f98f931c53cdcfdf7746e0e45"}
